# noLZSS

./: .gitignore  BENCHMARK_GUIDE.md  CLI_PLOTTING_GUIDE.md  CMakeLists.txt  Doxyfile  IMPLEMENTATION_STATUS.md  LICENCE  LICENSE-GPL-3.0  MIGRATION_GUIDE.md  PARALLEL_IMPLEMENTATION.md  README.md  REFERENCE_FACTORIZATION.md  REFERENCE_PLOTTING_README.md  bench.py  demo_batch_factorize.py  demo_reference_seq.py  example_benchmark_usage.py  example_enhanced_plotting.py  implementation_summary.md  lz_panel.py  pyproject.toml  test_data.fasta  test_enhanced_plotting.py  test_panel_plotting.py
.github/: copilot-instructions.md
.github/skills/nolzss-engineering/: SKILL.md
.github/workflows/: docs.yml  wheels.yml
_codeql_build_dir/: Doxyfile
benchmarks/: README.md  bench.py  core_benchmark.py  dna_benchmark.py  parallel_benchmark.py  plot_benchmarks.py
benchmarks/core_results/: benchmark_results.json
benchmarks/dna_results/: benchmark_results.json
benchmarks/fasta_results/: benchmark_results.json  trend_parameters.json  trend_parameters.pkl
benchmarks/parallel_results/: benchmark_results.json  benchmark_results.pkl
docs/: LSF_BATCH_GUIDE.md  PER_SEQUENCE_FASTA.md  RC_ALGORITHM.md  conf.py  cpp_api.md  examples.md  genomics_significance.md  index.md
examples/: gzip_demo.py  lsf_batch_example.py  lsf_batch_factorize_example.py  per_sequence_fasta_example.py  reference_sequence_plotting_example.py
recipe/: meta.yaml
scripts/: README.md  add_total_length_to_footer.py  migrate_binary_format.py
src/cpp/: bindings.cpp  factorizer.cpp  factorizer.hpp  factorizer_core.hpp  fasta_processor.cpp  fasta_processor.hpp  gzip_io.hpp  parallel_factorizer.cpp  parallel_factorizer.hpp  parallel_fasta_processor.cpp  parallel_fasta_processor.hpp
src/noLZSS/: __init__.py  bindings.cpp  core.py  factorizer.cpp  factorizer.hpp  parallel.py  utils.py  version.hpp
src/noLZSS/genomics/: __init__.py  batch_factorize.py  fasta.py  lsf_batch_factorize.py  lsf_job_worker.py  plots.py  sequences.py  significance.py
tests/: run_all_tests.py  test_basic.py  test_batch_factorize.py  test_core.py  test_cpp_bindings.py  test_empty_sequence_fixes.py  test_empty_sequence_handling.py  test_factorization_validation.py  test_genomics.py  test_genomics_significance.py  test_gzip_functionality.py  test_integration.py  test_lsf_batch_factorize.py  test_parallel_fasta.py  test_per_sequence_fasta.py  test_reference_seq.py  test_strand_bias_heatmap.py  test_structure.py  test_utils.py  test_version_consistency.py
tests/resources/: test_bacterial_dna.fna
